--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ input[type="color"]:focus,
 #home.full-screen-dem{background-color:#444;background-position:center 0%;background-size:auto;background-repeat:repeat;background-attachment:fixed;background-image:url(../img/bg-1.jpg);display:table;width:100%;height:100%;min-height:100%;overflow-x:hidden;overflow-y:hidden;vertical-align:middle;z-index:1;}
 #home.home-video{background-color:#41508D;background-image:none;}
 
-#orga-app.full-screen-dem{background-color:#444;background-position:center 0%;background-size:cover;background-repeat:repeat;background-attachment:fixed;background-image:url(../img/orga-app/loginbackground.jpg);display:table;width:100%;height:100%;min-height:100%;overflow-x:hidden;overflow-y:hidden;vertical-align:middle;z-index:1;}
+#orga-app.full-screen-dem{background-color:#444;background-position:center 0%;background-repeat:repeat;background-attachment:fixed;background-image:url(../img/orga-app/loginbackground.jpg);display:table;width:100%;height:100%;min-height:100%;overflow-x:hidden;overflow-y:hidden;vertical-align:middle;z-index:1;}
 #orga-app.home-video{background-color:#41508D;background-image:none;}
 
 .parallax-overlay{position:absolute;left:0;top:0;width:100%;height:100%;background-image:url(../img/pattern.png);background-repeat:repeat;background-color:rgba(44, 62, 80, 0.3);z-index:2;}
