--- a/css/software-pioniere.css
+++ b/css/software-pioniere.css
@@ -174,3 +174,87 @@ input#subscribe-email.form-control, input#subscribe-email {
     -ms-hyphens: auto;
     hyphens: auto;
 }
+
+h1,h2,h3,h4,h5,h6,a {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+a {
+    -ms-hyphens: unset;
+    -moz-hyphens: unset;
+    -webkit-hyphens: unset;
+    hyphens: unset;
+}
+
+h1 {font-size: 2.6em;}
+h2 {font-size: 2.2em;}
+h3 {font-size: 1.9em;}
+h4 {font-size: 1.7em;}
+h5 {font-size: 1.3em;}
+h6 {font-size: 1.1em;}
+
+.section-heading .large {
+    font-size: 2.5em;
+}
+
+#page-head-bg h1 {
+    font-weight: 400;
+    font-size: 2.3em;
+}
+
+@media (max-width: 767px) {
+    h1 {font-size: 2em;}
+    h2 {font-size: 1.8em;}
+    h3 {font-size: 1.6em;}
+    h4 {font-size: 1.4em;}
+    h5 {font-size: 1.2em;}
+    h6 {font-size: 1em;}
+
+    .main-flex-slider h1 {
+        font-size: 2em;
+        font-weight: 400;
+    }
+
+    #page-head-bg h1 {
+        font-size: 2em;
+        font-weight: 400;
+    }
+
+    .section-heading .large {
+        font-size: 1.8em;
+    }
+
+    .padding-80 {
+        padding: 20px 0;
+    }
+}
+
+@media (max-width: 360px) {
+    h1 {font-size: 1.8em;}
+    h2 {font-size: 1.6em;}
+    h3 {font-size: 1.4em;}
+    h4 {font-size: 1.2em;}
+    h5 {font-size: .9em;}
+    h6 {font-size: .8em;}
+
+    .main-flex-slider h1 {
+        font-size: 1.8em;
+        font-weight: 400;
+    }
+
+    #page-head-bg h1 {
+        font-size: 1.8em;
+        font-weight: 400;
+    }
+
+    .section-heading .large {
+        font-size: 1.7em;
+    }
+}
