ORGA App Links eingefügt

--- a/css/software-pioniere.css
+++ b/css/software-pioniere.css
@@ -1,3 +1,10 @@
+.smartbanner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000;
+}
+
 .person {
     text-align: center;
 }
@@ -54,6 +61,14 @@
 
 .fixed-navigation .navbar-default.navbar-bg, .navbar-default {
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+.navbar-default {
+    height: 100px;
+}
+
+.logo {
+    height: 100px;
 }
 
 .navbar-default .navbar-brand {
@@ -175,6 +190,40 @@ input#subscribe-email.form-control, input#subscribe-email {
     hyphens: auto;
 }
 
+.app-img {
+    width: 260px;
+    height: 78px;
+}
+
+.app-img-small {
+    width: 130px;
+    height: 39px;
+}
+
+.app-img-slider-left {
+    margin-right: 20px;
+}
+
+.app-img-footer-left {
+    margin-right: 8px;
+    margin-bottom: 8px;
+}
+
+.app-img-footer-right {
+    margin-bottom: 8px;
+}
+
+.content-sticky-footer {
+    padding-bottom: 120px;
+}
+
+.sticky-footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
 h1,h2,h3,h4,h5,h6,a {
     overflow-wrap: break-word;
     word-wrap: break-word;
@@ -209,7 +258,33 @@ h6 {font-size: 1.1em;}
     font-size: 2.3em;
 }
 
+.footer-app-imgs {
+    text-align: center;
+    margin-top: -7px;
+}
+
+@media (max-width:991px) and (min-width:768px) {
+    .app-img-footer-left {
+        margin-right: 0;
+    }
+}
+
 @media (max-width: 767px) {
+
+    #orga-app.full-screen-dem{
+        background-size: auto;
+        background-image:url(../img/orga-app/loginbackground_mobile.jpg) !important;
+    }
+
+    .navbar-default {
+        height: 60px;
+        padding: 0;
+    }
+
+    .logo {
+        height: 60px;
+    }
+
     h1 {font-size: 2em;}
     h2 {font-size: 1.8em;}
     h3 {font-size: 1.6em;}
@@ -220,6 +295,11 @@ h6 {font-size: 1.1em;}
     .main-flex-slider h1 {
         font-size: 2em;
         font-weight: 400;
+    }
+
+    #page-head-bg {
+        padding: 140px 0 60px 0;
+        background-size: auto;
     }
 
     #page-head-bg h1 {
@@ -234,9 +314,52 @@ h6 {font-size: 1.1em;}
     .padding-80 {
         padding: 20px 0;
     }
+
+    .content-sticky-footer {
+        padding-bottom: 0;
+     }
+
+    .app-img {
+        width: 130px;
+        height: 39px;
+    }
+
+    .footer-app-imgs {
+        margin-top: 0;
+    }
+
+    .content-sticky-footer {
+        padding-bottom: 0;
+    }
+
+    .sticky-footer {
+        position: relative;
+        left: unset;
+        bottom: unset;
+        width: 100%;
+    }
 }
 
 @media (max-width: 360px) {
+
+    #orga-app.full-screen-dem{
+        background-size: auto;
+        background-image:url(../img/orga-app/loginbackground_mobile.jpg) !important;
+    }
+
+    .app-img-slider-left {
+        margin-right: 10px;
+    }
+
+    .navbar-default {
+        height: 60px;
+        padding: 0;
+    }
+
+    .logo {
+        height: 60px;
+    }
+
     h1 {font-size: 1.8em;}
     h2 {font-size: 1.6em;}
     h3 {font-size: 1.4em;}
@@ -249,6 +372,11 @@ h6 {font-size: 1.1em;}
         font-weight: 400;
     }
 
+    #page-head-bg {
+        padding: 140px 0 60px 0;
+        background-size: auto;
+    }
+
     #page-head-bg h1 {
         font-size: 1.8em;
         font-weight: 400;
@@ -256,5 +384,43 @@ h6 {font-size: 1.1em;}
 
     .section-heading .large {
         font-size: 1.7em;
+    }
+
+    .app-img {
+        width: 130px;
+        height: 39px;
+    }
+
+    .footer-app-imgs {
+        margin-top: 0;
+    }
+
+    .content-sticky-footer {
+        padding-bottom: 0;
+    }
+
+    .sticky-footer {
+        position: relative;
+        left: unset;
+        bottom: unset;
+        width: 100%;
+    }
+}
+
+@media (max-width: 320px) {
+    .app-img-slider-left {
+        margin-right: 5px;
+    }
+}
+
+@media (max-width: 313px) {
+    .app-img-slider-left {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .app-img-slider-right {
+        margin-right: 0;
+        margin-bottom: 10px;
     }
 }
